--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,7 +10,8 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "isolatedModules": true,
-    "jsx": "react-jsx"
+  "jsx": "react-jsx",
+  "moduleResolution": "node"
   },
   "include": ["src"]
 }
