--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -18,6 +18,12 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!-- H2 Embedded DB for local/dev startup -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
