--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ frontend/node_modules/
 
 # Ignore all JAR files
 *.jar
+*.jar.original
+*.JAR
+*.JAR.original
 
 # Ignore VS Code settings folder
 .vscode/
