--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: wiz-khalubernetes
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wiz-khalubernetes
+  namespace: wiz-khalubernetes
 spec:
   replicas: 1
   selector:
@@ -42,6 +48,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: wiz-khalubernetes-lb
+  namespace: wiz-khalubernetes
 spec:
   type: LoadBalancer
   selector:
