--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,6 +17,10 @@ spec:
     metadata:
       labels:
         app: wiz-khalubernetes
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path: "/actuator/prometheus"
+        prometheus.io/port: "8080"
     spec:
       containers:
         - name: wiz-khalubernetes
@@ -38,11 +42,6 @@ spec:
             limits:
               memory: "1Gi"
               cpu: "500m"
-          # Prometheus annotations for scraping metrics
-          annotations:
-            prometheus.io/scrape: "true"
-            prometheus.io/path: "/actuator/prometheus"
-            prometheus.io/port: "8080"
 ---
 apiVersion: v1
 kind: Service
@@ -54,6 +53,11 @@ spec:
   selector:
     app: wiz-khalubernetes
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
+    - name: backend
+      protocol: TCP
+      port: 8080
+      targetPort: 8080
