--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,12 @@ frontend/build/
 # Ignore frontend node modules
 frontend/node_modules/
 
+
 # Ignore all Java class files
 *.class
+
+# Ignore all .lst files
+*.lst
 
 # Ignore all JAR files
 *.jar
