--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -48,6 +48,11 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.11.4</version>
         </dependency>
+        <!-- Spring Boot Actuator for /actuator/prometheus endpoint -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
