--- a/deployment.yaml
+++ b/deployment.yaml
@@ -43,6 +43,16 @@ spec:
             limits:
               memory: "1Gi"
               cpu: "500m"
+          # Optional: Uncomment to enable readiness probe for HTTP 80
+          # readinessProbe:
+          #   httpGet:
+          #     path: /
+          #     port: 80
+          #   initialDelaySeconds: 5
+          #   periodSeconds: 10
+          #   timeoutSeconds: 2
+          #   successThreshold: 1
+          #   failureThreshold: 3
 ---
 apiVersion: v1
 kind: Service
